refactor: kullanıcıya ozel veri erisimi ve guvenlik